crates/aranya-policy-compiler/tests/data/commands/recall_statement_undefined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
6 |         recall nonexistent()
  |                ^^^^^^^^^^^ recall block `nonexistent`
